# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2005-04-05 17:57:44 GMT	John Goerzen <jgoerzen@complete.org>	patch-214

    Summary:
      Made tests work with new Hugs system; now passes tests in GHC and Hugs
    Revision:
      missingh--head--0.7--patch-214


    modified files:
     ChangeLog Makefile MissingH.cabal


2005-04-05 17:52:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-213

    Summary:
      More changes for Hugs compatibility
    Revision:
      missingh--head--0.7--patch-213

    Use CPP to make show instance for FiniteMap conditional.  Adjust
    Makefile to use Cabal to build the .hs files for haddock.

    modified files:
     ChangeLog Makefile MissingH.cabal MissingH/FiniteMap.hs


2005-04-05 17:38:00 GMT	John Goerzen <jgoerzen@complete.org>	patch-212

    Summary:
      Stage 1 of compatibility fixes for new fptools
    Revision:
      missingh--head--0.7--patch-212


    modified files:
     ChangeLog MissingH/IO/HVFS.hs MissingH/IO/HVFS/Utils.hs
     MissingH/Time.hs debian/changelog


2005-04-05 16:47:01 GMT	John Goerzen <jgoerzen@complete.org>	patch-211

    Summary:
      New wholeMap, fixedWidth functions
    Revision:
      missingh--head--0.7--patch-211


    modified files:
     ChangeLog MissingH/List.hs debian/changelog
     testsrc/Listtest.hs


2005-04-01 20:44:21 GMT	John Goerzen <jgoerzen@complete.org>	patch-210

    Summary:
      Updated README
    Revision:
      missingh--head--0.7--patch-210


    modified files:
     ChangeLog README


2005-04-01 17:44:37 GMT	John Goerzen <jgoerzen@complete.org>	patch-209

    Summary:
      New CSV module
    Revision:
      missingh--head--0.7--patch-209


    new files:
     MissingH/Str/.arch-ids/=id MissingH/Str/CSV.hs
     testsrc/Str/.arch-ids/=id testsrc/Str/CSVtest.hs

    modified files:
     ChangeLog MissingH.cabal testsrc/Tests.hs

    new directories: