@@ -1,10 +1,13 @@
 missingh (0.9.2) unstable; urgency=low
 
+  * Compatibility with new Hugs and GHC releases.
   * New modules: MissingH.Debian, MissingH.Debian.ControlParser
   * New MissingH.List functions: wholeMap, fixedWidth
   * New function: MissingH.Time.epochToClockTime
   * Updated HVFS utilities to use epochToClockTime for compatibility
     with the newer Hugs
+  * New features in MissingH.IO.Binary: readBinaryFile, writeBinaryFile.
+    Make sure tests use these features where appropriate.
 
  -- John Goerzen <jgoerzen@complete.org>  Tue, 15 Mar 2005 09:18:10 -0600
 
